k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apptolast-whoop-david-api
  labels:
    name: apptolast-whoop-david-api
    app: whoop-david-api
